# LightTalk

./: .gitignore  readme.md
lighttalk-backend/: backend.md  pom.xml
lighttalk-backend/docker/: docker-compose.yml  init.sql
lighttalk-backend/src/main/java/com/lighttalk/: LightTalkApplication.java
lighttalk-backend/src/main/java/com/lighttalk/config/: Knife4jConfig.java  MyBatisPlusConfig.java  MyMetaObjectHandler.java  SecurityConfig.java
lighttalk-backend/src/main/java/com/lighttalk/controller/: AdminController.java  AuthController.java  (+3 more)
lighttalk-backend/src/main/resources/: application.yml
lighttalk-frontend/: .env.development  frontend.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lighttalk-frontend/src/: App.vue  main.ts
lighttalk-frontend/src/api/: admin.ts  auth.ts  message.ts  room.ts
lighttalk-frontend/src/assets/styles/: global.css
lighttalk-frontend/src/router/: index.ts
lighttalk-frontend/src/store/: user.ts
lighttalk-frontend/src/utils/: request.ts  websocket.ts
lighttalk-frontend/src/views/admin/: index.vue
lighttalk-frontend/src/views/chat/: index.vue
lighttalk-frontend/src/views/login/: index.vue
lighttalk-frontend/src/views/room/: index.vue
lighttalk-ws/: CMakeLists.txt
lighttalk-ws/docs/: quickstart.md  websocket_api.md
lighttalk-ws/examples/: chat.html
lighttalk-ws/include/: message.h  metrics.h  noncopymoveable.h  room.h  room_manager.h  server.h  session.h
lighttalk-ws/src/: main.cpp  message.cpp  metrics.cpp  room.cpp  room_manager.cpp  server.cpp  session.cpp
(+36 files in other folders)
